# Cloud-Cost-Optimizer

./: Dockerfile  Readme.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  schemas.py
server/: app.py
